--- a/HSoDv2CN/Assembly-CSharp.csproj
+++ b/HSoDv2CN/Assembly-CSharp.csproj
@@ -181,7 +181,7 @@
      <Compile Include="Assets\NGUI\Scripts\UI\UITexture.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UITooltip.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
-     <Compile Include="Assets\PlayerStandShoot.cs" />
+     <Compile Include="Assets\Scripts\EnemyIdle.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerEnum.cs" />
