--- a/HSoDv2CN/Assembly-CSharp-vs.csproj
+++ b/HSoDv2CN/Assembly-CSharp-vs.csproj
@@ -194,6 +194,7 @@
      <Compile Include="Assets\Scripts\PlayerWalk.cs" />
      <Compile Include="Assets\Scripts\Shoot.cs" />
      <Compile Include="Assets\Scripts\ShowTip.cs" />
+     <Compile Include="Assets\SpownManager.cs" />
      <None Include="Assets\NGUI\Examples\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.8.2.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Masked 1.shader" />
